--- a/styles.css
+++ b/styles.css
@@ -7,31 +7,30 @@ body {
 }
 
 canvas {
+  position: relative;
+  top: 1%;
   touch-action: none;
   background-color: #18191a ;
   border-radius: 50%;
-  position: relative;
-  margin-top: 0.5%;
 }
 
 .box {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  height: 96%;
+  height: 100%;
 }
 
 
 .option {
-  height: 15%;
+  height: 100%;
   border-radius: 50px;
   font-size: 20px;
 }
 
 .glowingBox{
-    margin-top: 1%;
-    height: 660px;
-    width: 660px;
+    height: 665px;
+    width: 665px;
     border-radius: 200%;
     background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00,#ffff00, #ff0000, #fb0094, #0000ff, #00ff00,#ffff00, #ff0000);
     background-size: 400%;
@@ -54,7 +53,6 @@ canvas {
     box-shadow: 2px 5px 8px 5px rgb(109, 109, 109);    
     height: 80%;
     width: 28%;
-    margin-left: 5%;
     border-radius: 5%;
 }
 
@@ -94,7 +92,7 @@ canvas {
 }
 
 .optionsMainContainer{
-  height: 100%;
+  height: 15%;
   margin-top: 5%;
 }
 
@@ -168,7 +166,7 @@ canvas {
 }
 .buttonDesign:after {
   border-radius: 5px;
-  /* position: absolute; */
+  position: absolute;
   content: "";
   width: 0;
   height: 100%;
