--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ canvas {
   width: 40%;
   height: 56%;
   cursor: pointer;
+  margin-left: -8.5%;
 }
 
 .optionsMainContainer{
@@ -109,7 +110,6 @@ canvas {
 }
 
 .optionHead{
-  text-align: left;
   height: 42%;
   margin-right: 2%;
 }
@@ -122,16 +122,18 @@ canvas {
   margin-right: 4%;
   text-align: center;
   font-size: 80%;
+  position: relative;
+  left: 1%;
 }
 
 #magicBrush{
-  padding:0;
-  width: 38%;
-  height: 38%;
-  cursor: pointer;
-  margin-right: 4%;
-  position: relative;
-  right: 17%;
+    padding: 0;
+    width: 38%;
+    height: 38%;
+    cursor: pointer;
+    margin-right: 8.5%;
+    position: relative;
+    right: 15%;
 }
 
 .buttons{
@@ -157,8 +159,8 @@ canvas {
   font-family: 'Bebas Neue', cursive;
   letter-spacing: 2px;
   font-size: 128%;
-  margin-left: 4%;
-  margin-right: 4%;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 .buttonDesign:hover:after {
   width: 100%;
